Fixed Homepage overflow
Fixed overflow of what we ofer section in homepage

--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,23 @@ nav{
     border-radius: 10px;
     height: 100%;
 }
+#card-left-img{
+    position:absolute;
+    left: -65px;
+    bottom: -65px;
+    z-index: 1;
+}
+#card-right-img{
+    position:absolute;
+    right: -65px;
+    bottom: -65px;
+    z-index: 1;
+}
 #card-right{
     background: linear-gradient(210.25deg, #C30F5F 6.15%, #FF3382 92.27%);
     border-radius: 10px;
     height: 100%;
+    min-height: 450px;
 }
 .card-heading{
     margin-top: 30px;
@@ -259,6 +272,21 @@ a{
 }
 .footer-image img{
     width: 120px;
+}
+@media (max-width:1400px) {
+    #card-left-img{
+        position:absolute;
+        left: 0;
+        bottom: -65px;
+        z-index: 1;
+    }
+    #card-right-img{
+        position:absolute;
+        right: 0;
+        bottom: -65px;
+        z-index: 1;
+    }
+    
 }
 @media (max-width: 821px) {
     #row-1 {
